# PPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/poe/pplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  PoeFFmpeg.cpp  PoeFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libswresample/: swresample.h
app/src/main/java/com/poe/pplayer/: MainActivity.java  PoePlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/poe/pplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
